# unodos-3

./: .gitattributes  .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  VERSION
amiga/: README.md  apps_m2.i  build.sh  dostris_app.asm  files_app.asm  games.i  gen_data.i  kernel.asm  loader.i  mkapi.py  mkdata.py  mkfat.py  music_app.asm  notepad_app.asm  outlast_app.asm  pacman.i  pacman_app.asm  paint.i  paint_app.asm  scheduler.i  sysabi.i  theme.i  theme_app.asm  tracker.i  tracker_app.asm
amiga/uae/: snap_variant.ps1  unodos_diskapp.uae  unodos_dt.uae  unodos_np.uae  unodos_ol.uae  unodos_th.uae  unodos_tk.uae
apple2/: .gitignore  HANDOFF-M3.md  README.md  applayout.py  build.sh  dostris.i  files.i  fs.i  harness.py  kernel.s  mkapi.py  mkapps.py  mkdsk.py  mkfs.py  mknotes.py  music.i  notepad.i  pacman.i  rwts.i  scheduler.i  sys.inc  theme.i  tracker.i
apple2/disk/: HELLO.TXT  README.TXT
apple2/tests/: diskapp.script  m1.script  m2.script  m2_persist.script  m3.script  m3_dostris.script  m3_music.script  m3_outlast.script  m3_pacman.script  m3_paint.script  m3_sched.script  m3_theme.script  m3_tracker.script  mkmaze.py
apps/: browser.asm  clock.asm  hello.asm  launcher.asm  mkboot.asm  mouse_test.asm  music.asm  notepad.asm  outlast.asm  outlastv.asm  pacman.asm  pacmanv.asm  settings.asm  sysinfo.asm  tetris.asm  tetrisv.asm
boot/: boot.asm  stage2.asm
c64/: HANDOFF.md  README.md  build.sh  clock.s  dostris.s  files.s  fs.i  harness.py  kernel.s  mkapi.py  mkfont.py  mkprg.py  mktables.py  music.s  pacman.s  paint.s  sys.inc  sysinfo.s  theme.s
c64/tests/: m1.script  m1_ntsc.script  m2.script  m2_persist.script  m3_dostris.script  m3_music.script  m3_outlast.script  m3_pacman.script  m3_paint.script  m3_theme.script  m3_tracker.script
docs/: API_REFERENCE.md  APP_DEVELOPMENT.md  ARCHITECTURE.md  AUDIT-HANDOFF-2026-06.md  FEATURE-MATRIX.md  FEATURES.md  GENESIS-PORT.md  GENESIS-STORAGE.md  MEMORY_LAYOUT.md  MUSIC-PLAYER-PLAN.md  PLATFORM-COMPARISON.md  PORT-8088.md  PORT-SPEC.md  PORTS-PLAN.md  RUN-X86-REAL-HARDWARE.md  UNO3D.md  UNODOS-3.1-MIGRATION.md  audit-2026-06-digest.md  boot-debug-messages.md  bootloader-architecture.md
dreamcast/: .gitignore  HANDOFF.md  MODULAR_APPS.md  Makefile  README.md  build.sh  build_real.sh  dc_main.c  dc_modload.c  err.txt  fb.h  host_desktop.c  host_modload.c  mac_compat.c  mac_compat.h  mac_io.c  mkfont_c.py  uno_splash.c  unodos.c
dreamcast/apps/: clock.c  dostris.c  files.c  music.c  outlast.c  pacman.c  paint.c  sysinfo.c  theme.c  uno_mod.h
dreamcast/tools/: capture_native.sh  kos_build.sh  ppm2png.py  unodos_orig_dc.c
gb/: .gitignore  README.md  apps.inc  build.sh  dostris.inc  gb_data.inc  gb_equ.inc  kernel.asm  mkdata.py  run.ps1
genesis/: .gitignore  README.md  apps.i  build.sh  gen_data.i  kernel.asm  mkdata.py  mktape.py  ps2.i  snapretry.ps1  softkbd.i  sram.i  tape.i
gg/: .gitignore  README.md  apps.inc  build.sh  dostris.inc  gen_data.inc  kernel.asm  mkdata.py  run.ps1
iigs/: HANDOFF.md  README.md  apps.i  boot.cfg  boot.s  build.sh  cpu65816.py  dostris.i  dostris.s  filesnp.s  fs.i  harness.py  kernel.cfg  kernel.s  mkapi.py  mkdata.py  mkdsk.py  music.s  outlast.i  outlast.s  pacman.i  pacman.s  paint.i  paint.s  snd.i  sys.inc  theme.i  theme.s  tracker.i  tracker.s
iigs/tests/: dostris.py  m0.py  m3.py  outlast.py  pacman.py  scheduler.py  tracker.py
kernel/: cpu8086.inc  kernel.asm
mac/: CMakeLists.txt  README.md  app_loader.c  mac_modload.c  stage_run.sh  test_fat12.py  uno_app.h  unodos.c
mac/apps/: notepad.c  uno_mod.h
mac/shots/: runshot.sh
mac/tools/: unodos_orig_mac.c
macplus/: .gitignore  README.md  appsvc.i  boot.asm  build.sh  demo.app.asm  diskapp.i  dostris.app.asm  driveinput.ps1  files.app.asm  games.i  harness.py  kernel.asm  mkapi.py  mkapp.py  mkdisk.py  music.app.asm  music.i  outlast.app.asm  pacman.app.asm  paint.app.asm  scheduler.i  snapscreen.ps1  sony.i  sysequ.i  theme.app.asm  tracker.app.asm  tracker.i
macplus/tests/: c_music.script  c_outlast.script  c_pacman.script  disk_all.script  disk_full.script  dt.script  f2.script  f3.script  f4.script  f5.script  fn.script  games.script  games2.script  m1.script  m3.script  mt.script  paint.script  residency.script  theme_disk.script  tk2.script
nes/: .gitignore  README.md  apps.inc  build.sh  dostris.inc  kernel.s  mkdata.py  mkines.py  nes_data.inc  run.ps1
pce/: .gitignore  README.md  apps.inc  build.sh  dostris.inc  harness.py  kernel.s  mkdata.py  pce.cfg  pce_data.inc  run.ps1
pinephone/: .gitignore  PINEPHONE-BRINGUP.md  README.md  apps.inc.s  build.sh  dostris.inc.s  harness.py  kernel.s  link.ld  mkdata.py  panel.inc.s
ppcmac/: README.md  apps.inc.s  harness.py  kernel.s
ps2/: .gitignore  HANDOFF.md  Makefile  README.md  build.sh  build_modular.sh  build_real.sh  demo_kernel.c  ee_audio.c  ee_modload.c  ee_platform.c  ee_usb.c  fb.c  fb.h  host_main.c  mac_compat.h  mac_io.c  main.c  mkfont_c.py  uno_mod_images.h  uno_splash.c  unodos.c
ps2/apps/: tracker.c  uno_mod.h
ps2/tools/: nmcheck.sh  refactor_core.py  relotest.c  relotest.sh  run_pcsx2.ps1  run_pcsx2.sh  unodos_orig_ps2.c
rpi/: .gitignore  README.md  apps.inc.s  build.sh  dostris.inc.s  harness.py  kernel.s  link.ld  mkdata.py
sms/: .gitignore  README.md  build.sh  gen_data.inc  kernel.asm  mkdata.py  music.inc  wm_render.inc
snes/: HANDOFF.md  README.md  apps.inc  games.inc  gen_data.inc  kernel.asm  mkdata.py  paint.inc  run_mesen.ps1  sched.inc  setup_mesen.ps1  sound.inc  spc700.py  sram.inc  theme.inc  tracker.inc
tools/: add_floppy_fs.py  create_app_test.py  qemu_test.py  qemu_test.sh  setup-arm-ppc.sh  to8086.py
tools/xt/: README.md  launch_one.ps1  sweep_xt.ps1  (+1 more)
uno3d/: README.md
unodef/: PHASES.md  README.md  WMODEL.md  unodef.toml  unogen.py  wmgen.py
unofs/: README.md  block_file.c  build.sh  unofs.h  unofs_core.c  unofs_test.c
unoui/: README.md  build.sh  host_unoui.c  host_unoui_input.c  unoui.c  unoui.h  unoui_app.c  unoui_app.h  unoui_demo.c  unoui_demo.h  unoui_input.c  unoui_theme.h
(+12 files in other folders)
