# UnoDOS/Mac - two applications from one APP-FREE core + GENUINELY loadable apps.
#
# Build with the Retro68 toolchain (see build.sh):
#   cmake .. -DCMAKE_TOOLCHAIN_FILE=<Retro68-build>/toolchain/m68k-apple-macos/cmake/retro68.toolchain.cmake
#   cmake --build .
#
# ARCHITECTURE (shared C core, apps loaded from storage at runtime)
#   unodos.c        - the APP-FREE kernel: WM, renderer, FAT12, audio synth
#                     primitives + game-music engine, input, and the generic
#                     pointer-based loader (#includes app_loader.c).  Contains
#                     ZERO app UI code; it dispatches every window through the
#                     AppInterface a module returns.
#   mac_modload.c   - the native platform hook uno_load_module(proc): brings the
#                     app in with GetResource('Uapp', 1000+proc), HLock, and
#                     calls the flat blob.  NO app code is linked into the kernel.
#   apps/<name>.c   - the 11 app modules (shared verbatim with the PS2/DC ports).
#                     Each is linked SEPARATELY into a flat ('--mac-flat')
#                     position-independent 'CODE'-style blob and stored as a
#                     'Uapp' resource in the kernel app's resource fork.  The
#                     kernel reads + relocates + calls it on demand at runtime.
cmake_minimum_required(VERSION 3.5)
project(UnoDOSMac C)

# The 11 app modules and their app-index order (== enum APP_* in uno_app.h).
set(UNO_APP_SRCS
    apps/sysinfo.c apps/clock.c apps/files.c apps/notepad.c apps/music.c
    apps/dostris.c apps/outlast.c apps/pacman.c apps/tracker.c apps/paint.c
    apps/theme.c)

# Where the generated resource (.r) files land.
set(GEN_DIR "${CMAKE_CURRENT_BINARY_DIR}/gen")
file(MAKE_DIRECTORY "${GEN_DIR}")

# --------------------------------------------------------------------------
# uno_build_app_resources(<variant> <UNO_COLOR> <extra-defs...>)
#   For one kernel variant, build all 11 apps as SEPARATE flat code resources
#   and emit a Rez source (<variant>_appmods.r) that wraps each freshly-linked
#   .code.bin into a 'Uapp' resource (id 1000 + app-index).  Sets parent-scope
#   ${variant}_APPMODS_R (the .r) and ${variant}_APPMODS_BINS (the blob list).
# --------------------------------------------------------------------------
function(uno_build_app_resources VARIANT COLOR)
    set(_r_lines "")
    set(_bins "")
    set(_idx 0)
    foreach(_src ${UNO_APP_SRCS})
        get_filename_component(_name "${_src}" NAME_WE)
        set(_tgt "appmod_${VARIANT}_${_name}")
        # Build the app as a standalone, flat, position-independent code blob.
        # Linker entry = uno_app_main_entry (the relocate-then-call stub in
        # uno_mod.h).  --mac-flat emits a raw relocatable blob (no app wrapper).
        add_executable(${_tgt} ${_src})
        target_compile_definitions(${_tgt} PRIVATE
            UNO_COLOR=${COLOR} COMPILING_AS_CODE_RESOURCE=1 ${ARGN})
        target_compile_options(${_tgt} PRIVATE -ffunction-sections -Os)
        if(COLOR EQUAL 0)
            target_compile_options(${_tgt} PRIVATE -m68000)
        endif()
        if(TARGET retrocrt)
            add_dependencies(${_tgt} retrocrt)
        endif()
        set_target_properties(${_tgt} PROPERTIES
            OUTPUT_NAME "${_tgt}.code.bin"
            LINK_FLAGS "-Wl,--mac-flat -Wl,-euno_app_main_entry -Wl,-gc-sections")
        set(_blob "${CMAKE_CURRENT_BINARY_DIR}/${_tgt}.code.bin")
        list(APPEND _bins "${_blob}")
        math(EXPR _id "1000 + ${_idx}")
        # Rez: read the flat blob bytes into a 'Uapp' resource at id ${_id}.
        # (use a char-code for ';' so CMake does not eat / escape it)
        string(ASCII 59 _SEMI)
        string(APPEND _r_lines
            "data 'Uapp' (${_id}, \"${_name}\") {\n    $$read(\"${_blob}\")\n}${_SEMI}\n\n")
        math(EXPR _idx "${_idx} + 1")
    endforeach()
    set(_r "${GEN_DIR}/${VARIANT}_appmods.r")
    file(WRITE "${_r}" "/* Auto-generated by CMake: ${VARIANT} app code resources. */\n\n${_r_lines}")
    set(${VARIANT}_APPMODS_R   "${_r}"   PARENT_SCOPE)
    set(${VARIANT}_APPMODS_BINS "${_bins}" PARENT_SCOPE)
endfunction()

# --------------------------------------------------------------------------
# uno_app_target(<name> <variant> <UNO_COLOR> <extra-defs...>)
#   Build the APP-FREE kernel (unodos.c + mac_modload.c, NO app sources) and
#   bundle the variant's pre-built app code resources into its resource fork.
# --------------------------------------------------------------------------
function(uno_app_target NAME VARIANT COLOR)
    add_application(${NAME}
        unodos.c mac_modload.c
        ${${VARIANT}_APPMODS_R})
    target_compile_definitions(${NAME} PRIVATE UNO_COLOR=${COLOR} ${ARGN})
    target_compile_options(${NAME} PRIVATE -ffunction-sections)
    if(COLOR EQUAL 0)
        target_compile_options(${NAME} PRIVATE -m68000)
    endif()
    set_target_properties(${NAME} PROPERTIES
        LINK_FLAGS "-Wl,-gc-sections -Wl,--mac-strip-macsbug")
    # The kernel APPL can only be Rez'd after the app blobs the .r reads exist.
    foreach(_b ${${VARIANT}_APPMODS_BINS})
        get_filename_component(_bn "${_b}" NAME)
        string(REPLACE ".code.bin" "" _bt "${_bn}")
        add_dependencies(${NAME}_APPL ${_bt})
    endforeach()
endfunction()

# Build the app code resources once per variant (color/mono), then the kernels.
uno_build_app_resources(color 1)
uno_build_app_resources(mono  0)

# Color build (System 7+, Color QuickDraw). Target 68020 (Mac II family).
uno_app_target(UnoDOS7      color 1)
# Mono build (System 1-6, classic QuickDraw). Target 68000 for the Plus.
uno_app_target(UnoDOSClassic mono 0)

# Autotest variants (launch the app stack at boot for screenshot runs).  They
# launch apps as resources through launch_app() -> uno_load_module() exactly
# like the shipping build; only the boot auto-launch differs.
uno_app_target(UnoDOS7Test       color 1 UNO_AUTOTEST=1)
uno_app_target(UnoDOSClassicTest mono  0 UNO_AUTOTEST=1)
uno_app_target(UnoDOS7FTest      color 1 UNO_AUTOTEST_FILES=1)
uno_app_target(UnoDOS7TkTest     color 1 UNO_AUTOTEST_TRACKER=1)
uno_app_target(UnoDOS7PtTest     color 1 UNO_AUTOTEST_PAINT=1)
uno_app_target(UnoDOSClassicPtTest mono 0 UNO_AUTOTEST_PAINT=1)
uno_app_target(UnoDOS7FatTest    color 1 UNO_AUTOTEST_FAT12=1)
uno_app_target(UnoDOS7ThTest     color 1 UNO_AUTOTEST_THEME=1)
uno_app_target(UnoDOS7SpTest     color 1 UNO_AUTOTEST_SPLASH=1)
uno_app_target(UnoDOSClassicSpTest mono 0 UNO_AUTOTEST_SPLASH=1)
uno_app_target(UnoDOS7DtTest     color 1 UNO_AUTOTEST_DOSTRIS=1)
uno_app_target(UnoDOS7OlTest     color 1 UNO_AUTOTEST_OUTLAST=1)
uno_app_target(UnoDOS7PmTest     color 1 UNO_AUTOTEST_PACMAN=1)
